# HyperTide

./: .dockerignore  .gitignore  .onedev-buildspec.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Claude.md  LICENSE  LICENSE.md  README.md  README_CN.md  ROADMAP.md  SECURITY.md  STATUS.md  SUPPORT.md  start-dev.ps1  test_client.py
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-image.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  commands.rs  main.rs  models.rs  utils.rs  workspace.rs
crates/cli/src/cmd/: add.rs  branch.rs  changeset.rs  checkout.rs  checkpoint.rs  chunk_upload.rs  completions.rs  diff.rs  doctor.rs  init.rs  lock.rs  log_cmd.rs  login.rs  mod.rs  remove.rs  repo.rs  rollback.rs  save.rs  server.rs  stage.rs  status.rs  submit.rs  sync.rs  trust.rs
crates/server/: Cargo.toml
crates/server/src/: bootstrap.rs  health.rs  main.rs  routes.rs  state.rs  tests.rs
crates/server/src/api/: auth.rs  blobs.rs  common.rs  lock.rs  manifests.rs  mod.rs  session.rs  storage.rs  trust.rs  versioning.rs
crates/server/src/api/middleware/: authz.rs  mod.rs
crates/server/src/core/: audit_chain.rs  auth.rs  checkpoint.rs  config.rs  error.rs  high_risk.rs  lock.rs  mod.rs  open_core.rs  replay.rs  session.rs  storage.rs  storage_backend.rs  versioning.rs  witness.rs
crates/server/src/core/auth/: repo.rs  token.rs
crates/server/src/core/db/: migrations.rs  mod.rs  pool.rs
crates/server/src/core/events/: mod.rs
crates/server/src/core/lock/: repo_pg.rs
crates/server/src/core/versioning/: repo_pg.rs
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml  smoke.ps1  smoke.sh  ubuntu-server-windows-cli.md
deploy/cli/: README.md  package.ps1  package.sh
deploy/observability/: grafana-dashboard.json  prometheus.yml
deploy/server/: .env.example  .env.production.example  Caddyfile.example  Dockerfile  Dockerfile.prod  README.md  backup.ps1  backup.sh  ci-compose-smoke.sh  ci-restore-smoke.sh  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  restore.ps1  restore.sh  smoke.ps1  smoke.sh  storage-consistency.sh
docs/: architecture.md  execution-plan-2026-05-02.md  getting-started.md  product-evaluation-2026-05-02.md
docs/api/: openapi.yaml
docs/cli/: README.md  user-guide.md
docs/operations/: runbook.md  self-hosting.md
docs/plans/: 2026-02-26-hypertide-m11-event-led-cutover.md  2026-02-26-hypertide-m11-ops-handbook.md  2026-02-26-hypertide-m8-m11-production-roadmap.md  2026-02-26-hypertide-m8-m11-todo.md  2026-03-07-hypertide-m11-005-cross-environment-witness-topology.md  2026-03-09-hypertide-m8-012-validation-matrix.md  2026-03-09-hypertide-next-phase-plan.md  2026-03-09-hypertide-review-report.md  2026-03-09-hypertide-vcs-design-review.md  2026-05-02-server-cli-product-review.md
docs/plans/2026-02-25-hypertide-v1/: 26-plan-M7-workflow.md  30-todo-global.md  31-todo-M1.md  32-todo-M2.md  33-todo-M3.md  34-todo-M4.md  35-todo-M5.md  36-todo-M6.md
docs/server/: README.md
hypertide-ui/: README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
hypertide-ui/src/: App.tsx  index.css  main.tsx  router.tsx
hypertide-ui/src-tauri/: Cargo.toml  tauri.conf.json
hypertide-ui/src-tauri/src/: main.rs
hypertide-ui/src/components/: FileUploader.tsx  KeyManager.tsx  LockManager.tsx  Sidebar.tsx  StatusBar.tsx  Topbar.tsx
hypertide-ui/src/layouts/: MainLayout.tsx
hypertide-ui/src/lib/: api.ts  utils.ts
hypertide-ui/src/pages/: DownloadPage.tsx  HistoryPage.tsx  KeysPage.tsx  LocksPage.tsx  SearchPage.tsx  UploadPage.tsx  Workspace.tsx
hypertide-ui/src/store/: useAppStore.ts
migrations/: 202602260001_init.down.sql  202602260001_init.up.sql  202602260002_chunks.down.sql  202602260002_chunks.up.sql  202602260003_manifests.down.sql  202602260003_manifests.up.sql  202602260004_asset_identity.down.sql  202602260004_asset_identity.up.sql  202602260005_changeset_workflow.down.sql  202602260005_changeset_workflow.up.sql  202602260006_event_store.down.sql  202602260006_event_store.up.sql  202602260007_audit_chain.down.sql  202602260007_audit_chain.up.sql  202602260008_trust_checkpoints.down.sql  202602260008_trust_checkpoints.up.sql  202602260009_witness_receipts.down.sql  202602260009_witness_receipts.up.sql  202602260010_high_risk_nonces.down.sql  202602260010_high_risk_nonces.up.sql  202602260011_git_gate_refs.down.sql  202602260011_git_gate_refs.up.sql  202602260012_agent_sessions.down.sql  202602260012_agent_sessions.up.sql  202602260013_changeset_agent_metadata.down.sql  202602260013_changeset_agent_metadata.up.sql  202602260014_event_attribution.down.sql  202602260014_event_attribution.up.sql  202602260015_replay_checkpoints.down.sql  202602260015_replay_checkpoints.up.sql  202602260016_lock_model_upgrade.down.sql  202602260016_lock_model_upgrade.up.sql  20260226_0001_init.down.sql  20260226_0001_init.up.sql  20260226_0002_chunks.down.sql  20260226_0002_chunks.up.sql  20260226_0003_manifests.up.sql  20260226_0004_asset_identity.down.sql  20260226_0004_asset_identity.up.sql  20260226_0005_changeset_workflow.down.sql  (+8 more)
skills/: README.md  VALIDATION.md  sync-skills.ps1
skills/hypertide-auth-bootstrap/: SKILL.md
skills/hypertide-auth-bootstrap/agents/: openai.yaml
skills/hypertide-auth-bootstrap/references/: auth-bootstrap.md
skills/hypertide-trust-audit/: SKILL.md
skills/hypertide-trust-audit/agents/: openai.yaml
skills/hypertide-trust-audit/references/: trust-audit.md
skills/hypertide-versioning-ops/: SKILL.md
skills/hypertide-workspace-flow/: SKILL.md
spec/: 00-architecture-review.md  00-conclusion.md  00-unified-plan.md  01-object-model.md
src/: main.rs
src/api/: auth.rs  blobs.rs  common.rs  lock.rs  manifests.rs  mod.rs  storage.rs  trust.rs  versioning.rs
src/core/: audit_chain.rs  auth.rs  checkpoint.rs  compliance.rs  config.rs  high_risk.rs  lock.rs  mod.rs  replay.rs  storage.rs  versioning.rs  witness.rs
(+10 files in other folders)
