[package]
name = "hypertide-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hypertide"
path = "src/main.rs"

[[bin]]
name = "ht"
path = "src/bin/ht.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Web Framework
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dotenvy = "0.15"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
blake3 = "1.8.3"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
jsonwebtoken = "9.3.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
