[package]
name = "hypertide-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ht"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
blake3.workspace = true
reqwest.workspace = true

