[package]
name = "hypertide-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "hypertide"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
blake3.workspace = true
base64.workspace = true
reqwest.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
tower.workspace = true
