[package]
name = "hypertide-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "hypertide"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
blake3.workspace = true
base64.workspace = true
reqwest.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
async-trait.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[features]
# Public open-core builds keep this feature as a compatibility stub.
# Commercial Enterprise crates live outside this public workspace and depend on
# the OSS crates instead of making OSS builds depend on private repositories.
enterprise = []

[dev-dependencies]
tower.workspace = true
